Fixed footer overlapping content by removing body bottom margin and applying proper layout spacing

--- a/Acebook/wwwroot/css/site.css
+++ b/Acebook/wwwroot/css/site.css
@@ -33,10 +33,11 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 0 0 5rem 0;
   background: #F2F4F7;
   font-family: verdana, sans-serif;
 }
+
 
 /* ========================================================================== */ 
 /* LOGIN */ 
@@ -249,4 +250,9 @@ body {
     .comment-line span.small {
     opacity: 0.7;
 }
+
+main {
+    padding-bottom: 3rem;
+}
+
 
